--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,4 +1,8 @@
-﻿Version 9.4 (April 24, 2019)
+﻿Version 9.5 (August 22, 2019)
+   • Export to new Thorn Writer format
+   • Export to HTML
+
+Version 9.4 (April 24, 2019)
    • Redesign symbols panel
    • Copy custom characters to clipboard
    • Add buttons to change case of characters in editor
