Export individual pages to HTML

--- a/Language Pad/Notebook/CharacterEditor.resx
+++ b/Language Pad/Notebook/CharacterEditor.resx
@@ -124,6 +124,73 @@
   <data name="ImportLocalToolStripButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABYAAAAWCAYAAADEtGw7AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAANLSURBVEhL1dNtSBNxHMDxf0G9CHoRWEEvix4I6o2mEJWY
+        CyylhqSRIoLVSp2aOi3FPF3OtM2SfJrLh9m2m/Nhc+acE3WT0vk0na75QlIz35RGkBBkRr/u/t4upyup
+        F0E/+LDbjv/37nZ36J9NSEjIjuDgYG8atX2C+uSEhoZywsPDOREREZyoqCgOn88/TxAEVygUckUiEbew
+        sJArkUi4YrH4DJPZOEFBQbu7u7s/zc3NwezsLGtmZobdnp6edvvuQpLkSyaD0FlB880s+aAzu2Zw0kX+
+        7MXK0tIS2Gw2GB0dxcbGxlh2u90NfRLLy8ugVqs7mSwVTml+WP/yDWQox7G7dTawvOiH+fl56O/vd2O1
+        WlkDAwP4wAsLC9ji4iJUVla2MlmE/BMbb8m7pyGldgyLFzfBK+ckOBwO6OnpYZnNZpbFYnFDH3Rqagry
+        8/PLmSxCvjeUATnVPd9dYbFUBRMTEzjW3t6OGY1GVkdHhxuTyYTPvra2diU1NTWUySLkd1N1UNI2+ZmO
+        JskGQW/oxAtaWlpAq9WydDodi95H0+v1YDAY8FUUFBQ4eTzeNiaL0MmYqp0Stf3D7SobxObKoLe3F5Sk
+        BuoUJDxTMlRqloJBNmgxdaMOlPVNEJuYrjwWq9pFQwSxFceFyuH5RKkVyqpV+HKJml54QI6sM/xLhMj6
+        jVAMLBBy27scxdB7/+SmDBxOk/U544vbQadvg9bnBijSjrM3808RmomvpxI0/jh843GX9da9Unx3q+uN
+        UNDs9LhoM2l1dkiQ9r09GtawHYev5pmMqcQj/FzmSOnwpMeFm8nVvIKwXJMZR+m5mGUg8x7LYGhoCO5U
+        dEG22uFx4WaEVDgwRVfCZBEKTNdVZOaX4DMWVFhAQF2Sp4WbSZKZP5/kkT5Mlnr7kpqyrmc+AV6aCK4V
+        dXlctF6yS80qgdwOl4WdDoRgC5OlnmW+5krk/WY4Fy+FOOkw8J/aIN5F5i7Og9hKG/ApAQKdnEmuzoEL
+        GQGB0Y9WApNVcL18ZINrtDLasJuYNS4Rpo9HuPe8meTqeO07fsgnuvj9mbjSZf/foPevRf/mG6n4cjpR
+        8dovupykUntXiz+H/l/2UA5QDv+F/RQvyn87CP0A2/fRIxGMqycAAAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="ExportLocalToolStripButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABYAAAAWCAYAAADEtGw7AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAQESURBVEhLvZRtTJtVFMeriUZdQjL9YDQGJTGaLDFRZ/zi
+        hyZ+0ICmvLXyusRsbhhQ5sawkMmaAUKdtNACXdZsEigvhb63G6WFDIIUSkvLS6G8v0OI8YvLooiZ/r3n
+        7qlC8MNmoif55znPvef87jn33ucR/a/2sqT6jXc+uW7MKjH70uQdA2/l6rTPp1Q9I0z/O3szU/NFSUNf
+        uM4UgsYcQo0xCKXBjzOVjs1jqfUSIezh7LVMtbSk3t11oszkSJMbu09XOBerGLTshg+l+u/xWY3rh5ck
+        ta8K4Q9mx49fe+zdvGvfvS6rzRKGRC+KFU9IzhuGL1334Vx9P4oaB5Bc1OoVph/Mjn2ojCeoTCaL12q1
+        fS0tLWPNzc1jSs2NSFa99/d8dR9OfeNB/hXn3tWr+oBer/frdDq/Wq3uS0lJeUXAHLb4D6qPviBVPalS
+        qXoGfYE/LN4xdPUEmQIo1npwUunBicpunK3zQGccQKvTB4NjCMHxKDQaTUDA/LPl5uYe6e/v/3ltfR35
+        VVZcaLyNwro+FGpuI7v8FmSXXDh9xYNPa7wobuzHyctmTEaiGBwcvJuamvqcgDlsDHxqZ2dnd2NjAxub
+        2yhQOnDmWy8+UriQXuaEpNSOxGILf56tuYmRsQjm5+exurr6W0FBQbmAOWxdXV2rW1tb2N7exjqrejo6
+        j7yvrWwL3Ej60or3isx4/4IF52t74Oz1c+ji4iJXU1PTjwzxyH3SPpNKpQmjo6N3V1ZWsLCwgJmZGUxP
+        T8PnDyOv0oq0i06ICzvxeY0butYejI+PIxKJ8Li5uTl6v8MYYgH3t8nl8kYGure8vMwDZ2dneWI4HMZN
+        7yDyqx0oUPWgvMEOVgBCoRAmJib44lQxFVNRUXHwKioUikedTudPS0tLPGBtbY1rP9x8awCltTYOpGpj
+        QOqQfJLFYrmTnZ19VMDybXibTfyyubnJAymBFqFDpD2ncRI/VEF0BlRENBrlBVAhrNM9Bv5YwIpE7KpI
+        GfgewWKKtUeiQ6LtiW0RwUixSqemprgmJyeRk5NzUcDyimXBYHC3t7eX2oHVaoXNZuOy2+1cNGYymcBu
+        Do/p7OyE0WhEW1sbl8Fg4GOs4q8E7H1wIBDY9Xq9YJ8o2KdK1wft7e0wm80cSjDyKdntdnOfFqF3mief
+        FjoEZie96/F4eJUdHR0cSoExMD2pYhrr7u7mPkH3gynvAFgsFkuHhoZ+HR4eht/vx8jICMhnY2CfOKgT
+        grlcLjgcDq5YB7QQwQna0NCwl5SUdE7AikRxcXFPJyYmXs7MzLRkZGTY2B/OTmKd2Ejp6el/iR00F/uj
+        WUnJyckkC/NNjKFMSEh4VsAesMeZnmI68pCiHMr9r00k+hOE91b218mJAwAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="ClearLocalToolStripButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABYAAAAWCAYAAADEtGw7AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAN5SURBVEhLvZR9TJNXFIevA7EkVFpwMLAoUbFlQ7QIMlGo
+        zE9ilplFsgQhLMMlara/ZoiLyYiJsmFgH0bZDGYGByhEojiQrsPQupYCLVQoAnktLVDkI0tdmFNELL+d
+        a94YjS6T1exJnqS553dO33tv3zLOmRz/xLI8yYlT2f4pjxdeBSW7WWBdwZrhxuPp0BUl3inN8dsilnzj
+        20y2pL4w6W590VYYiuJQnR/dJJZ85+LnsVZzcRwMX8ihK1R7vtnDlGLJN0ppkPbLtSO/HQmH/lgMyvKC
+        KsSS75zOkxxqLFj5oO4zGX7cJ3e2/LRor+1SVLtY9o0fPg7S1h4KQVulEhPOA9Mjtg/HanLZG2L5v9FW
+        zkIt1bJal3n7jPfOYXh6PsXXu9bMnpQv8OQztlOMzR1TBTvap1f+MdqZDO2BBPyapoYnIwMlMeGPqrKl
+        RvNZFi1G587ZnSy/ICLgYUuIHDWrVbPF8apHE+05uDf8PhyGDSOtVewjMTo3DjOWe9KPTX+/dP5M17ld
+        8P5+EDPjWZgaTMREtxIui2bSWis/KsbnxieMrXOY0p3esTRMDe/G5K0M3HcmY+JGNPoNUtxu3fOg43Jk
+        JcDmiS0vj8OU6vhrIB73BlIw5d4BT3ccRq1RGGxVoPeaDK6+3JkbDcr6q9+xBWLLy2HXxpvHu2JxV1iF
+        yf7VGLOuwLgtFoJeCqdZhZu612Fp2j/br9/c01LBVolt/46tLrRmqEON0c4IjLQp8KdDDeFaJAaMSvQ1
+        B2CocwPsWgVu92TB3bV30lLtVyi2/iPzSdn5Yrb/evNGr6APwaAxis5XAbd1I5wtK9GjjYRwnc7a/i4E
+        0yZ0Nya4j+1jcdQX8HjCCwgiw8lli4KZuvOXdcOCgX4J7SvQqwvG+E0NDV0Mt+0ddDWEwdWsmdafj2pN
+        UrH11LOc5G+olHzmUvklhJJLybfI5PKvAspNzRpvr06KW8YkCIYwuO2ZaKpKne24mjJWcpCVUW4z+TbJ
+        n5i/QHyGhHyCHykjFST/y0yQSJjGeCFGcFk+oG1nw34l8aH5Z83Q6YJ5lwMDWSZlMsg0ci2pInmvnPQn
+        n4EPX0jyLS0j39yWzLY2lErqK4+zC++lsyxa20SmkvwpE0i+O56NIIPJ54Y+DT+jQJJ/exi5mFxC8q1y
+        +We+xu+DZ3j2NfL/gLG/ARNWhSUq0wQkAAAAAElFTkSuQmCC
+</value>
+  </data>
+  <metadata name="FileToolStrip.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>249, 17</value>
+  </metadata>
+  <data name="ImportFileToolStripButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABYAAAAWCAYAAADEtGw7AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
         YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAANLSURBVEhL1dNbSFNxHMDxf0E9BD0EVtBj0YWgXjQDKcVc
         YCk1JI0MEbKWl6Wp01LMo0uXtnmhi85lOtt25rxszppzom7iZd6m0zUfJDXzJTWCBCEz+nXO37OTs5XU
         Q9APPuxsh//3nLNzDvpnExoauiMkJMSbRm2foD45YWFhnIiICE5kZCQnKiqKw+fzzxEEwRUKhdz8/Hxu
@@ -141,7 +208,7 @@
         ijcno8tIKrV3rfhj6P9lD+UA5fBf2E/xovy3g9B3/d/RKU8OVxIAAAAASUVORK5CYII=
 </value>
   </data>
-  <data name="ExportLocalToolStripButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="ExportFileToolStripButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABYAAAAWCAYAAADEtGw7AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
         YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAQESURBVEhLvZRtTJtVFMeriUZdQjL9YDQGJTGaLDFRZ/zi
@@ -164,7 +231,7 @@
         zUpKSUkhWZhvYgxFQkLC8wJ2nz3J9AzToUcU5VDuf20i0Z+bKVb6lZtV6QAAAABJRU5ErkJggg==
 </value>
   </data>
-  <data name="ClearLocalToolStripButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="ClearFileToolStripButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABYAAAAWCAYAAADEtGw7AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
         YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAN5SURBVEhLvZR9TJNXFIevA7EkdLTgQLAocWLLhmIRxKFQ
@@ -185,98 +252,31 @@
         +We+xu+DZ3j2HfL/gLG/ATdEhTCIhsucAAAAAElFTkSuQmCC
 </value>
   </data>
-  <metadata name="FileToolStrip.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>249, 17</value>
-  </metadata>
-  <data name="ImportFileToolStripButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAABYAAAAWCAYAAADEtGw7AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAANLSURBVEhL1dNbSFNxHMDxf0E9BD0EVtBj0oWgXroIUg5z
-        gaXUkDRSRPAyb0tTp6WYR5eatlnRRecqN9125rxszppzom7iZd6m0zUfJDXzJTWChCAz+nXO37NTq5XU
-        Q9APPuxsh//3nLNzDvpnExoaui0kJOQojdo+Tn1yw8LCuBEREdzIyEhudHQ0VyAQnCUIgicSiXglJSW8
-        8vJynkQi4YnF4gAm8/MEBwfv7Orqej8/Pw9zc3Os2dlZdntmZsbjuxtJkn1MBqHTwubEfMWQq6BmaMqt
-        TtW7trKyAna7HcbGxrDx8XGWw+HwQJ/E6uoqaDSaDiZLhTObb9f3vYJc1QR2vdYO1t4BWFhYgIGBAQ82
-        m401ODiID7y0tIQtLy9DdXV1K5NFiJPWmKTomoFM+TiWKm6CF64pcDqd0N3dzbJYLCyr1eqBPuj09DSU
-        lpZWMlmETiSoAkVy6xd3WCxVw+TkJI61tbVhJpOJ1d7e7sFsNuOzl8vla1lZWWFMFiG/RPU+yfOpD3Q0
-        XTYEBmMHXtDS0gI6nY6l1+tZ9D6awWAAo9GIr6KsrMzF5/O3MFmE/GOfbJdoHG+vPrFDcpEMenp6QEVq
-        oVZJQp2KodawlAyyQYdpGvWgqm+C5LQc1eFk9Q4aIojNOC5SjSykSW3w6KkaXy5R0wO3yNEfjPwSccv2
-        mVAOLhEK+5tC5fAiJ6MpF4ezZf2u1HttoDc8h9ZnRqjQTbA3808R2slPJ69oOTiccLfTlnTjIb67T+tN
-        UNbs8rpoI9m1Drgi7X99KLxhKw5fLjabsog7+LkslNLhKa8LN1KkfQHhRWYLjtJzPt9IFt+VwfDwMFyr
-        6oQCjdPrwo2IqHBQpv4Bk0UoKEdflVf6AJ+xsMoKQuqSvC3cSLrM8sGfTx5jstTbl96UH593H/jZJRBX
-        0el10Y8y3GrWCRUOuCjqcCIEm5gs9SwLtJeibjbDmVQppEhHQPDYDqluMk8pXiRX20FACRTqFUxyfXzP
-        5QYGxdxZC8pQQ3zl6E/iaI9oIx5iv3OBML87yLtxlEmuj8+eI/uPxdxbDEh5uMr5DXr/9+jfTkQpP55K
-        U770i6kkqdTu9eK3of+XXRRfyoG/sJfiQ/lvB6GvH9bRL0TLbGoAAAAASUVORK5CYII=
-</value>
-  </data>
-  <data name="ExportFileToolStripButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAABYAAAAWCAYAAADEtGw7AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAQESURBVEhLvZRtTJtVFMeriUZdQjL9YDQLSmI0WWKizvjF
-        D032QQMaXlthwBKzuWFAmRvDQiYjA4Q6W6BQuoxsEigvhb63W98ggyCF0pbyUijvr4UQ4xeXRREz/XvP
-        3VOF4IfNRE/yz3Oee8/53XPuvc8j+l/tleSaN9/95IbuRInBmy7rGng7V9PwYmr1c8L0v7O3slRflKj7
-        QvX6MagMY1DoApBrfThbZY0eTWtMFsIezV7PqpWUNDp7TpbprekyneNMpW2xmkHLbnpR2vw9PlPYf3g5
-        ue41Ifzh7Nix608cz7v+3RvSuhPCkOglcflTyRe0w5dveHG+sR9FTQNIKWr3CNMPZ0c/lMcTVCqVxjc0
-        NPS1tbUFW1tbg3LVzXBOo+f3/No+nP7Gjfyrtt1r15r9zc3NPo1G46utre1LTU19VcActPgPag4fkSif
-        ViqVrqGR4B9GTxA9rgCTH8UNbpySu3GyyoFz9W5odANot3mhtQ4hMB6BSqXyC5h/ttzc3EP9/f0/r62v
-        I7/ahItNd1BY34dC1R1kV9yG9LIdZ6668anCg+Kmfpy6YsBkOILBwcF7aWlpLwiYg8bAp7e3t3c2Njaw
-        Ed1CgdyKs9968FG5HRllNiSXWpBYbOTPc4pbGAmGMT8/j9XV1d8KCgoqBMxB6+npWd3c3MTW1hbWWdXT
-        kXnkfW1iW+BE0pcmvFdkwPsXjbhQ54Kt18ehi4uLXC0tLT8yxGMPSHtMIpEkjI6O3ltZWcHCwgJmZmYw
-        PT0Nry+EvCoT0i/ZIC7sxucKJzTtLoyPjyMcDvO4ubk5er/LGGIB97fJZLImBrq/vLzMA2dnZ3liKBTC
-        Lc8g8musKFC6UKG2gBWAsbExTExM8MWpYiqmsrJy/1UsLy9/3Gaz/bS0tMQD1tbWuPbCDbcHUFpn5kCq
-        NgakDsknGY3Gu9nZ2YcFLN+Gd9jEL9FolAdSAi1Ch0h7TuMkfqiC6AyoiEgkwgugQlinuwz8sYAVidhV
-        kTDwfYLFFGuPRIdE2xPbIoKRYpVOTU1xTU5OIicn55KA5RVLA4HATm9vL7UDk8kEs9nMZbFYuGhMr9eD
-        3Rwe093dDZ1Oh46ODi6tVsvHWMVfCdgHYL/fv+PxeMA+UbBPla4POjs7YTAYOJRg5FOy0+nkPi1C7zRP
-        Pi10AMxOesftdvMqu7q6OJQCY2B6UsU05nA4uE/QvWDK2wcWi8WSoaGhX4eHh+Hz+TAyMgLy2RjYJw7q
-        hGB2ux1Wq5Ur1gEtRHCCqtXq3aSkpPMCViSKi4t7NjEx8UpWVpYxMzPTzP5wFhLrxEzKyMj4S+ygudgf
-        zURKSUkhGZmvZwx5QkLC8wJ2nz3J9AzToUcU5VDuf20i0Z+xW1b+p5LShAAAAABJRU5ErkJggg==
-</value>
-  </data>
-  <data name="ClearFileToolStripButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAABYAAAAWCAYAAADEtGw7AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAN4SURBVEhLvZR9TJNXFIevA7EkVFpQGFiUOLFFUSmCTBQq
-        U+eIWWYWiQlCMKKJGv1rhriYSEyUDaNTF8dmMDNMUDAQZQPpuintLJSPQoUikNfSAkU+slSDX4BYfjvX
-        vFlmdFGs8UmepLnnd07fe2/fMs65DO/YgizJ9z+keyc8X3gXnNjMfCtyovuqjyVDlxd7Lz/Da51Y8oxT
-        qWxuZW7cw8q89TDkRaE0O/xPseQ5ZV9Hmk3Ho2A4JIcuV+06uZUpxZJn5NMg7TfL+28eDob+aAQKsvyK
-        xJLnnM2SHKjOWThW8ZUMP++S2+suzNphuRLWKJY946edftryAwFoKFZi2L5nvN+ybfByJvtQLL8dDYUs
-        sKlUVu4wbZhw3zsIV/s+nNoUPXlGPsOVzdhGMTZ1aovYkU698v5ASzy0e2LwR5IarpQUnIwIfnYxXWo0
-        nWfhYnTqnN/IsnNCfJ7WBchRtkw1+V206tlwYwYe930Jm2FVf/1Ftl2MTo2DjGWe8WLjP86bPtH6yya4
-        /96PiaE0jPbEYrhNCUeTZsRcLj8ixqfGXsZW2GqT7e7BJIz2bcbInRQ8scdj+FY4ugxS3K3fOtZ8NbQY
-        YNPEljfHVptoe9S9FI+7EzDq/AyutigMmMPQU69Ax3UZHJ2ZE7eqlJXXTrMZYsubYdUuNQ21RuKhsAQj
-        XcswaF6AIUskBL0UdpMKt3Wz0Xxj92SXfm17XRFbIra9HktF4OXeZjUGWkLQ36DAA5sawvVQdBuV6Kzx
-        QW/LKli1CtxtT4OzdcdIU6lXrtj6v0wnZZeOs93GmtVuQR+AHmMYna8CTvNq2OsWol0bCuEvOmvr5xBq
-        16CtOsZ5dBeLoj6f5xNegR8ZTM6f5c/ULb+v6BMM9EtoXIAOnT+Gbmto6Bw4LZ+gtSoIjhrNuP5SWH2c
-        iq2kno9I/oZKyRculV9CIDmPXEzGF37rU2iq0bg7dFLcMcZBMATBaU3FjZLEyeZrCYMn9rMCyq0lPyb5
-        E/MXiM+QkP/iRcpIBcn/MmMkEqYxlkQIjqYttO10WH+NfWr6TdN7NmfaVV9flkqZFDKJXE6qSN4rJ73J
-        F+DDZ5J8S/PJRZ/Gs/VV+ZLK4mOs5ItklkZra8hEkj9lDMl3x7MhpD/50tD/ws/Il+TfHkTOIeeSfKtc
-        /pmv8fvgGZ79gHwfMPYPWzKFOwtuxQEAAAAASUVORK5CYII=
-</value>
-  </data>
   <metadata name="SearchToolStrip.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>678, 17</value>
   </metadata>
   <data name="SearchToolStripButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABYAAAAWCAYAAADEtGw7AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAQOSURBVEhLzVRrTJtVGMZLVNy8xUtAUfbTn/uBl/inxkZI
-        sISNgMJaM5bF6DCbIKEBYX4wGoUC6zq70BYKrQspdS0tdRSm1bPVtVu70RttXJteLJT1xijVyeZMe3wP
-        +Vg0KWj8YXySJ/m+c877fO/3vO97Cv5zDAwM7Ojv72cCG4CsoaGh5+itfwc+n1+kUCjOWCyWbCwWw8lk
-        Esfjcez3+7FSqXT39fW9TB/95wDR3XNzc+uxRApTorM5do/+t3Jqer26R3urdxxll2MpbDKZcnDufTrk
-        70EyRQj96vYv4uqPtLf28y/+0ip1ZJql9pXD0vkYZxAtM5vVqxZnAHu9XgxWvUWHbg+JRDIZh0zLO7Xr
-        H540pz4evpQ+Mu5Y2xRuklxdbOCbnW+0TiWjkLlarV4VCoUP0uH5QVHUTsg2K1SZce1n3/9EhFrlzmTX
-        aXfyU+VCvGvCHW1VOMMNxy3miqPfXumS6u8Eg0EMf1lNS+QHqb7b7cZs6vTtRqHFc3jcvkhNLET7pjzR
-        vukfF/lnFsIgvvDeKSuqGzSjmk7tCiks2CGgJfIDhNkulwvvpTQ395+8bO9Q2IOfazwh0Yw/JJkNBL8w
-        +BaOfeU53yKfRwdEVsRqn4pFo1EsEommaYn8IH1KCkIy5ggsJq7cPj8w5XUNfxNwKM4HLsmMQXRi+ho6
-        OuFChyRXUU2HOhWJRIgVI7REfkBvlszOzua6xYbcnmPnXM2yecRTeZD4XABpzBGkAp6a8aEeWHt3yGTr
-        lBhvk0S4XO4BWmJrjI2NOZOpG7j6E83NQ8M2U/ekBwlBTP5dEMmAJ876UNeXjguVbdrrkWgcj4yMrLPZ
-        7Efp8K0BhXjFYDDkvMFlXM3VZA4KfrDzVF40BBYM6q6hIxLLlaoObeyyO4SXlpYwj8fLVFVVvUqHbw8Q
-        /8BqteKVG2v4uBJl9/ZoMm9TuuQ73dNpSqG/k0ilN0TNZjMeHR3FAoEgW1FRUUOHbw9SSJlMturz+XA6
-        ncaZTGaDoVBo4/ehYD/r9Xqs0WgwDBUWi8W4srKyjQ7fHmSi4AN7gAJ4/hqKK2tpaTnIZDKfZLFYDHj/
-        XavVYp1Oh6VSKYb64NraWlldXd19tMRfcC/wAWAhcCfwsfr6+mchs5eMRuOb4D8DJvRFWH+mrKzstfb2
-        9jUiDKO9YYtcLseNjY0XGAzG/XDmLsjLQ0Ai+DjwKfBuF1yd+8LhMD+RSEyCt6M2m62tt7f3ddjfVVpa
-        urupqSlCxFUqFXY4HHhmZiZXXl6+D/bvYjPbh4GkhZ4APg0sApIL/nlgKU3yTNaKiouLX+BwOBdhBjaK
-        Srpqq2LeAyQ+bVqyA/gIkHzszyRrZK+wpKSkENqOBzZdh74e3srn/zsKCv4AC5topTaiEGEAAAAASUVO
-        RK5CYII=
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAQQSURBVEhLzZRtTFtlFMfxJSpuvsWXgKLsox/3AV/ilxqJ
+        kGBJNwIKa81YFqPDbIIEAsK8YzRaCl3XrUtpodC6kFLX0pdRYFp9Bq7d6EbfG1dCWwtlLS2jVCebM+3j
+        eZrLoklB4wfjP/kl9z7PPf977jnnuXn/uXp7e3f09PSUAnUAUyAQvEBv/Tvx+fwCpVJ5zmKxpKPRKI7H
+        4zgWi+H5+XmsUqncPB7vVfrRfy4w3T01NbURXUlg6vT5DLvL+FsZZdhgdeludw+j9HI0gaenpzPw3Id0
+        yN+LZIoQ+tU9v4hZn+hu7+df+qVZ5kg1yuyrh2VzUU4fWi5t1KxZnQvY5/NhKNU7dOj2kkqlozHItKxD
+        t/HxKUviU8nl5JFhx/qmcYP02mId3+J8q3ksHoHMNRrNmkgkepgOzy2KonZCtmmR2oKrv/j+J2LUrHDG
+        O8+645+rPLHOEXekWekM1Z2wWsqPfnu1U2a8GwgEMHwli7bILdJ9t9uN2dTZO/Uiq/fwsH2RGvFEeGPe
+        CM/w4yL/nCcE5p4Pzsyimj4LqurQrZLGQjmEtEVugTHb5XLhvZT21v5TV+ztSnvgS603KDbNB6WTC4HT
+        E37P8a+9F5sUc+iAeBYx28aikUgEi8ViA22RW2ROSUNIxhyhdaZVYZ/rHfO5JN8sOJQXFy7LzQF00nAd
+        HR1xoUPSa6iqXZMIh8OkFAO0RW7BbBZNTExkKIkps+f4BVejfA5x1V7Uf2EBaS1hpAbOmPyoC9beF8zY
+        OqTmOySR1tbWA7TF1hoaGnLGEzcx6zPtrUMS28yxUS8SgZniuwCSAyfH/ajzK8d0RYvuRjgSwwMDAxts
+        NvtxOnxrQSNeM5lMGV9gGbNatamDwh/sXLUPCaAEffrr6IjUerWyXRe94g7ipaUlzOVyU5WVla/T4dsL
+        zD+anZ3FqzfX8QkVSu/t0qbepfTx944ZkpTSeHclkcyawnHHg4ODWCgUpsvLy6vo8O1FGimXy9f8fj9O
+        JpM4lUplCQaD2c+Hhv1sNBqxVqvFcKhwf38/rqioaKHDtxc5UfCCPYAQrs9Dc+VNTU0HS0tLn2YymQy4
+        /12n02G9Xo9lMhmG/uDq6mp5TU3NA7TFX3Q/8BCQD+wEnqitrX0eMnvFbDa/DVPDgBP6Mqw/V1JS8kZb
+        W9s6MYajnS2LQqHA9fX10wwG40F45p7IzSMAMXwSeAZqt8tqte4LhUL8lZWVUajtoM1ma+nu7n4T9ncV
+        FxfvbmhoCBNztVqNHQ4HHh8fz5SVle2D/XvazPZRgIzQU8CzQAFAfvAvAsU05JqsFRQWFr7E4XAuTU5O
+        ZptKpmqrZt4HkDptlmQH8BhAXvZnyBrZyy8qKsqHseNCmW7AXEu2qvP/XXl5fwCsL2iO+iP9vAAAAABJ
+        RU5ErkJggg==
 </value>
   </data>
   <metadata name="ttMain.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
