--- a/Language Pad/Notebook/PropertiesEditor.resx
+++ b/Language Pad/Notebook/PropertiesEditor.resx
@@ -127,61 +127,61 @@
   <data name="PageUpToolStripButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABYAAAAWCAYAAADEtGw7AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAANJSURBVEhLtZVJTFNRFIYfzwctBUqpQwDFCVBCXJgYUbC1
-        qBihYGmZFAWqgIBAS1HAVjBVFI1TiC6MAQWpSkWsYq0zY5ziEBdudGlwWEhiCrqAhR7vaW+DpKg4/cmf
-        3OH837l5ue89ZqKS6Celx2sYHp3+G0mrWLW2QTa42ii0kamHc/UvJa3iokqalr/XWaLAaFYNy6r5x+jW
-        nyumkgnOro98vf1KDCgavCDLFAwV7fJPMgOnoSW/r6XljLeyLuRFjS3BAXW5wDwfSpujB8gzj6elvyWP
-        NbWiO8Z21Vdlo/cYMLrs0mLIO7nobbTBK4LWT0yxNfyGPdb4kfQmkRvU5Z3X4iDjSOgriZ4JoLGfS6Ln
-        tNWtcUMbTUHjAl1ObuDBnusKUOwLehJpZLxofHxJKietKjet/JBvDh8FNHqB8hQPlKedTiZj157qlABq
-        bfFfyDXsoAh3rajghapPLHxTblkCCoQ18SDlDB9STXxIO+sN6ee8IQ1NxqktfFA1O5tkNIvB2JY6vKJG
-        cJSiRhWlYYRpB+e8NFjjHKdCIEIyzAJY3yaAzIs+kNnu9PqLAlh3QQDp50kD0lRFDoDXcGd7kl2q54oo
-        0qllO9gH28ibtas1ZWi3RTVotKg+1/UmwQaLD2R1+EL2VT/IsTqdTeYbL/tCXkcw1PfkjlRbEu2GS3K7
-        vkVuX2Wc9jGmwnMhxZK3S8cESXS8uS5LqznrgXtrIeeaH2y6IYTcW/6Qd9sfcok33xSC2iaEwhszQGOS
-        9X+fQ+P9p1h3xdZwrQcfKRzA/E4RFPQEQGGv01u6RJB3xx+K74YQcGw/jUxMCD70WAFbCLSoLwBKHoih
-        9NFkKHk4GbbeE5NGItB0z/wDsJFrPfw02QEovi8G7ZMpUP58KpQ9m+JogM20vbP+DVj3Y/AvP6OexL7E
-        YnJtLv/yUXTNBF2L7B2pD8QMzSJjjPDPICSeShwiqeSs+ztVUNuVCHt7kqCub9T7yDXc203Wu9aC+viC
-        AVIfhhmaRcaYvwxH7EOMnQNnx3KyiFRWPS+ZzQ9PYgvD5GxxaAJbisYxruFehJLNJPWzMEOzyECWm1hi
-        7OhHjIV4CgwFE0+nxjGu4R7WYC1mMPu/xTDfAIZ1usB9LWANAAAAAElFTkSuQmCC
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAANJSURBVEhLtZVJTFNRFIYfzwctBUqpYAAFB0QJcUFiRMVi
+        UTEoQ2ktIChYZRYoFAUsgqmiaHCI0YUxoCBViwJVLDjLFEQiGhdudGlwWEhiKrqAhR7vaW+DBJRB/JM/
+        ucP5v3Pzct97zFQl0c6J36JmeHQ6OwotYVX51dKvm3XCNjK1s67+o0JLuODc2vWfNMZg0BkUw9Iy/jm6
+        NXOFFDPeKWcD3+2/HQKyagdI1ntDUVPkN2kpp6Yl09eaQsZRXunzurxtqwVqc2bDcsirWztInvkWWjot
+        2UVUiB7pGhU/5TWOY8DoguZVkHZx5Ye1pQ4BtH5qCivnVx8xRYzE14rGQW0+2BoOCaf93kq0jBuN/V0S
+        LZdfZggf2qn3mhBoc2w1D47clYHsmFd/oI5xoPGJJSmes6lQv/FzeoP/KKDGAeSXeCC/bHUsGdv2FJcE
+        UNEW8YNcwxaKGK8NRTw/1YWg94XG1SBDWC0Ptl3hg1LPh7irjhB/zRHi0GSsrOeDos7aJKFODLobyuEN
+        5YIzFDWqYDUjjKta/KbUFG45FQIRktAggMSbAkhqdIKkJqsTGwWw/YYA4q+TBqSpghwAr+HBpmhzqJbL
+        pkir1h1ge/eRN+uQYdvQYaPiq86o+F7ZFQ07jE6Q3OIMKXdcYJfJ6hQy33nLGdJavOFsZ+pImTHKXNoc
+        adbWR5o36eZ9CSmyD6JY8nZpGC+JhrfE5tAyznSiJwZ2tbrA7ntCSH3gCmkPXSGVeM99IajahJB1bwGo
+        9dKB33NovP8UO15h5Zyhqk9mAaY/EUFmpxtkdVmd0S6CtEeukPPYh4DDBmhkakLwyecyyCDQ7G43yO0V
+        Q17fXMh9Nhf29ohJIxGoO3xnANZxhlMvYi2AnKdiyO93h8JXHlDw0t3SAJvldy2cHbDmz+BJP6P2xM7E
+        YnJtbk36KNp9QVMv/UjqPTFDs8gYI/wzCIk9iH0kxZzp+BMFVLRHwdHOaKjsHvUxcg2PdpD19hhQnV8x
+        SOqXYoZmkTHmL8MROxFjZ89FYZw0QMmqlsWy6f7RbNbSSDbHbyubh8YxruFegJxNIvULMUOzyEDWOLHE
+        2NGFGAvxFBjyJp5PjWNcwz2swVrMYPZ/i2F+AWuVuruD3IP4AAAAAElFTkSuQmCC
 </value>
   </data>
   <data name="PageDownToolStripButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABYAAAAWCAYAAADEtGw7AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAMGSURBVEhL7ZNdSNNRGMZPrum+nE43TdHKFDK9iTRC3bQE
-        NXXklm5+ZDbUTHSWmLo2P5YgomRldhMtTbMy8zs1tJaW2KLIgiK6q5uyoCCiIKLw7bzb348wcVKXPfCD
-        s/M+z/M/O9uf/EkRelaMrJLdvCJ6dj0TsU8yA6uj0ZwFFUOxy2IckUPeue1vmYh9wuKq4d2w57zjsqS3
-        eYDWJHvDROzT/+J5/bPiCB1LGa5z0MwhLWdbFhcnmRxB0eI0T9IFJ8ho94DC1siZxTlEVkJ8mVpCpMdY
-        XWUtsp8V/Ymg642FygE5lA3KQNHqBHvbOJB8iQMpl7mgYkjp4EJmpwTqbqlA3xdrzdQOqyHeKP4YoSPr
-        mVoqI3FIqBHfMfYoZxUmLijoibAQy9SdPEjr4kF6N3+B63xIvcYD9VV8CAfyewJBezHsA/3mO5nGBYUY
-        CU/Z4PuseiQekts51hAWZvTyIXNAAPsHnSHrhg1cZ/YLIKOHD7l9PlDan/BFVrG2kKlaqvAy4r3vbPBr
-        w2ik9VQYzhpyBs1NIWSPukDOmI3sUSFoRoSQM+wB9ebE79FVvGamYnlFlbK3atvC3pXfDoUDtBQLc82u
-        kDchgkN3beSNu8JBswhqzarZhFr3MRpbY0uvoMhKtlo3GPepZCLQWpp/TwQF991A+8DdSsGUG5ycVoC6
-        0e8pXiETs0+7qjl647jya/HkRmtR0SMxFD+RQPG0BBqfx4HGFPRqx2HiydhXp5jj3CunLak/jli8oOih
-        rbjuRRgc7Za+l1axQxjbqoR3xiIbCEdeL5lomEqb1VokYHi8BWrG5J+jdGwNnTtaPXbcL5o4FAHFlSKm
-        eAoDiL/qlN/LpukUODGZ9E1azmmi+944YzzoxQxmseM3sSn4I7hQ0LyOgq/mJspmz20kWn3Gfyba4Gym
-        n4Nxj5mhB72YwSx2YNe8HChzpxVRJBQvCr6efpQAn1AS5SggQbhm9nCGHvRiZu7U2LVEeF/4RC4FjUIK
-        htwo7gy4xj2coQe9mLHvv/x3IuQXmLe4T8g09dUAAAAASUVORK5CYII=
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAMGSURBVEhL7ZNrSNNRGMZPrs3dnNdpilamkOmXSCPUTUtQ
+        00ZuqfOS2VAz0Vli6nJeliRiZGX2JdJMszLznhqaS8tqUWRBEX2rL2VBQURBROHbebfjJUyc1Mce+MHZ
+        eZ/n+Z+d7U/+pNBSTqS8nNuwJKXcWhaxTnI9p63OmA5lA1GLYhhSQPbZzW9ZxDphccXgdth5jrcoKS2u
+        oG2Uv2ER6/S/eFb/rDhUx1GF6Gw0M8hKuKb5xXGNPFCet50lrskWUltdIa85bGp+DpEXEi9WS4jsMKej
+        uEn2s6x3B+i6o6C8TwHF/XJQNtvCrhY+xF/kQ8IlASQyEtoEkNYuhZqbiVDaE2XOVA+qIcbg8jFUR1az
+        WioDsYmtcrll6FRNKxsFoKQnwkIsU7cLIblDCCmdojmuiSDpqhDUV/AhfMjp8gPtheAP9JtvZY1zCjQQ
+        oeqY17PKoRiIb+WbQ1iY2i2CtD4x7Om3g/TrFnCd1iuG1C4RZPV4QlFv7Bd52co8VrVQIcXEY/eZgNf6
+        4TDzqTCcPmAHmhsSyBi2h8wRCxnDEtAMSSBz0BVqjbHfIyqEDaxicYUXcTdqW4LflYwGwV5aioVZRgfI
+        HneE/bctZI85wD6jIxwdTZyOrXYeobEVlvQSCivnqnX90Z8Kx/3MpTl3HCH3vhNoHzibyb3nBCcmlaCu
+        836KV8hi1mlbJb/UMKb6WjCx1lyU/8gFCp5IoWBSCnXPo0HT6P9qywHixuzLU+QRweVTpqQfB03ukP/Q
+        UlzzIhgOdcreyyq4gcy2LOGdccgawlfUSsdr7yZPa01S0D/eAFUjis/hOq6GznlmjxX3iyY+RUxxoLhQ
+        3CS+xCfxpPfL+skEOD4R901Wwq+n+x44Yx70Ygaz2PGbuBT8EewpaF5FwVdzHWW92yYSoT7tMxWhtzPS
+        zwG4x2boQS9mMIsd2DUrG8rMaR0pUoo7BV9Pb4qvZxAJ54mJP67ZHs7Qg17MzJwauxYI7wufKKCgUULB
+        kBPFmYFr3MMZetCLGev+y38nQn4BfK+4RxGeLIkAAAAASUVORK5CYII=
 </value>
   </data>
   <data name="AddToolStripButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABYAAAAWCAYAAADEtGw7AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAODSURBVEhLndNbSFRBGAfwE6WEURkUiD6Ilx56sSyKbkbR
-        BkWhUZKoULGWmNtyktzStLLStZJ1TVK8YNqItbJ5Y1vZLCu7EFarQW8Kut7vd10hiK/5xh09ukcfGviz
-        nplvf2f2m1Hgo7i42KOysrLQbDaT2tpaYjKZCH0mFRUVxGAwkLKyMlJaWkpKSkpIQUEBycvLIzk5OSQ7
-        O5vo9Xqi1WpzIyMjNzi4hUG/9HB8fByGhoZgeHiYZWRkZP5TmtHR0UXPWIPfi4uLi3VwC4MQosOCtrY2
-        6OzshI6ODvbZ1dXF0t3dzdLT0yObvr4+iI+Pv+bgFgZthQ7f3t7eziCOSrHe3l4WRKTBuf7+fnm4qKhI
-        hz/RZrMxRLpDKYaAXHBtRRhbgJAcODAwwDI4ODgfPofrsnB+fj5rBbYAIY5ykEN4SHLBOnp4znBubi47
-        vJaWFqddchDXeaQ3AoN1sjC9j6wV/CDkUI5hnTQ4h3WiKDrDmZmZurGxMdZbBOVQRLAGg3cew5+xVq1W
-        O8MZGRkMxh3LoVJsYmICrC2f4V2TESw/XkDvQCerValUznB6ejqDsbeIYqQ75eDk5CTLg6oIiC0PgJtV
-        CoZjbUxMjDOcmprKetza2srejpH+fI5OTU3B9PQ0pFaHQ3CBK1yh+JufL1i9LJySksKuG/5TyLVAis7M
-        zFA4AkIKXdmu66wvl99xcnIy2zHeBg5Ld/vptwmMX56CoUEPhk9ZcK/mDIS9dIM4UyCkGZVQWv8YgjXb
-        XgUlrVHt1wjrHawgJCYmzsOILoUzTFFwtWI7XKNQ/JudoLb4w3nTeogyb4Eb9bvYnEjXEqqPwpHrLrsc
-        rCBoNBpZmB/aI9NFCCVrIdy4Di4gWLcRoj+4Q/R7d/Y3vgTXVMYdi2F6ubOwp8vtOMssgs5yCfR1l+HJ
-        +2h4+DkE1N83w+2mANDVXwT920sglgTZVM/3/jykcd3qYAVXpVL5jMNyPcbD4wdnt9tB//ECiD82w/2m
-        ffDuVzmrDwsL06I1R84Nt9DQ0DSr1Wpvbm6eXSm0ZraxsXE27fWpvzENm+D2tz1QVHP3j8VisSsUCpFa
-        6+bIheHu6+t7wN/f/5ifn9/xpaFrJ3x8fE55e3uf9vLyOiuWBdluNewG7deTEHhuw2NPT08FNTxoXJj2
-        H2MVzeqDCS7hh++sScLsixW8cc6xRocg/APyEbx9ZVny4AAAAABJRU5ErkJggg==
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAODSURBVEhLndNrSJNRGAfwN9IRRWVQEPpBvPShL10puhlF
+        C4rCoiQxoWKWmGu8Sq40rax0VmPOJMULph2xJmtarMmyrMwiLKdB3xR03u93nRDE03mOO/rm3vzQgT/z
+        PefZ7z17zlHgo7i4eH1FRUWhzWYjVVVVxGq1EvpMLBYLMZlMpKysjJSWlpKSkhJSUFBA8vLySE5ODsnO
+        ziZGo5HodLrcyMjIVW5uftAv3R8bG4PBwUEYGhpiGR4envuUZmRk5K9nrMHvxcfHx7q5+UEIMWBBa2sr
+        dHR0QHt7O/vs7Oxk6erqYunu7pZNb28vJCQkxLm5+UFbYcC3t7W1MYijUqynp4cFEWlwrq+vTx4uKioy
+        4E90Op0Mke5QiiEgF1xbFMYWICQH9vf3swwMDMyFz+G6LJyfn89agS1AiKMc5BAeklywjh6eJ5ybm8sO
+        r7m52WOXHMR1HumNwGCdLEzvI2sFPwg5lGNYJw3OYZ0oip5wZmamYXR0lPUWQTkUEazB4J3H8Ges1Wg0
+        nrBer2cw7lgOlWLj4+PgaK6Dd41msH9/Bj39HaxWrVZ7whkZGQzG3iKKke6UgxMTEyz3Ks9CbPkmuF6p
+        ZDjWxsTEeMJpaWmsxy0tLeztGOnP5+jk5CRMTU1B2ssICC1QwGWKv2l4xupl4dTUVHbd8J9CrgVSdHp6
+        msJn4UShgu262vH83ztOSUlhO8bbwGHpbj/9tIL582Mw1RrB9CkL7rw6BeHPl0O8dSukm1VQWvMQQrUb
+        X4Qke6n3aIWVblYQkpKS5mBEF8J6axRcsWyGOAolvNkGGnswnLOuhCjbOrhWs53NiXQt8eUhOHjVe7ub
+        FQStVisL80N7YL0AYWQZRJhXwHkEq1dD9AcfiH7vw/7Gl+Ca2rzlb5he7izs6b92nGUTwWC/CMbqS/Do
+        fTTcrzsBmm9r4WbjJjDUXADj24sgloQ41U93NezXKja4WUGhUqmecFiux3h4/OBcLhcYP54H8ftauNu4
+        G979KGf14eHhOrRmydmxPCwsLN3hcLiamppmFgutmamvr59Jf33sd0ztGrj5dScUvbr9y263u5RKpUit
+        FbPk/PAJDAzcGxwcfDgoKOjIwtC1owEBAcf9/f1P+vn5nRbLQpw3aneA7ssx2Hpm1UNfX18lNdbTeDPt
+        P8YSmqX7Er0jDtzySsbsjhX8cc69Rocg/AHxQbx87YPdowAAAABJRU5ErkJggg==
 </value>
   </data>
   <data name="RemoveToolStripButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
@@ -206,20 +206,20 @@
   <data name="DuplicateToolStripButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABYAAAAWCAYAAADEtGw7AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAMXSURBVEhLtZRLbxJRFMfZ6MboJ3Cpn8CdiUuNmrh15d7P
-        4IoxsVFKeYytbQBLXxTbOEbLo0rTJurGUFpJ+oDwaqHDMMAwQEsf2iY93nOGgSJtIgtv8sslYfjd/znn
-        Dgaj0XjZO+u9LwgzD3thhsFP8dcMFy273X5zd3eXOzg46IlGo8G5XMO3mpruhWJFUbhardYz/0Gs0v7P
-        YlmWue3tDBGLrZl8Qd+3QHDuu85cQONLKEiMjTtHxyZG+87iHn9rNJvNVzrEkiRyqVSC8LO1t7cHjUZv
-        VKsq2AcH7naIRVHk4vE44ff7/PV6DXqFuYDnrfe6WiGKOWI+NN+zuFarQlkpd4uxt9FolPjkE1riUqkI
-        kpS/kHxeJLANmri/U6woJUotyxIXWmgnzuWyEI/HziUW24TNzQ1CVStQLpfBau0Qq1wikeDC4TDjBycI
-        sy0xpspk0h2k0ykilUpCMpmkxJVKBUrlUqdYVVWuVDo/8Vnx38JkMgEsEIjiDg2OOdpiFKqqQokjkQgj
-        zAkf2z3WW6GVrZW+sbEO6+vIGjsozaRlakOxWGyLMSWmRvAQZHFpoSUuFmUqFVPt7CA5dlgOstkskc/n
-        mbREaaWC1BZLkkSD06XIwmKIxHiFsNzV1RVYWdGJAKsMlpeXCTYX2jEtilvXjZ3eEmJ63DExuynaFaIS
-        ZZDlAhQKiMT6LlFShL1Y7DuZVVcHmT1HYsuQ5UYmk2oOTZPiIJe+Lvmr1SpdIZx2paLQcPAQvWxMiDs+
-        h6//0dGR/oI8MjgcjksOx5vbTufwHcLtJEacIwMo04X6cFCkS7UDK1Q+PlNhIcYm3af9lpdPmv9x3cvh
-        GnmKAl14NiVKsE37+/uwtb0FgXk/fAl9hmmvB/pev/hlMpmuNjXdC8XY13ZKrWzWplbZJycnkJdECAQD
-        IAgC2OzW3/yQ+XFTcf5CMQ4ERVguJkTh4eEhHB8fw+npKX3+GY2Aa9QFA9b++ivz8wfNn1+8eCd/fWJq
-        nPd4J+yId8Zjn33/zqbjmZ60TXrctmHH4AezxfwMZ9X8KVsGwx/yDWl/Gd3WTwAAAABJRU5ErkJggg==
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAMYSURBVEhLtZRLbxJRFMfZ6MboJ3Cpn8CdiUuNmrh15d7P
+        4IoxapRSHmNrG0BoaSm2cYyWRy1Nm6gbQ2kl6QPCq4UOwzDMDNDSl23C8Z47DBRpE1l4k18uCcPv/s85
+        dzAYjcbL/hn/fY6bftgP0wR2kr1muGjZ7fabu7u7zMHBQV80Gg3G5Rq51dL0LhTLsszUarW++Q9ile7/
+        LBZFkdnezlESiTVTIBz4HgrP/tCZDWnMR8KUsXGne8zrfnUWz/h7o9lsvtIlFgSeyWRSlCBZe3t70Gj0
+        R7Wqgn1o8G6XmOd5JplMUoLBQLBer0G/EBewrPVeTyt4vkCZi8z1La7VqlCRK71i7G08Hqd8CXBtsSSV
+        QRCKF1Is8hRsgyYe6BbLskRTi6LARBY6iQuFPCSTiXNJJDZhc3ODoqoKVCoVsFq7xCqTSqWYaDRK+Mlw
+        3ExbjKlyuWwX2WyGksmkIZ1O08SKooBUkbrFqqoyknR+4rPiv4XpdApIIOD5HTo44uiIUaiqMk0ci8UI
+        UYb73Omx3gqtbK30jY11WF9H1shBWSKt0DaUy+WOGFNiagQPQRaXFtriclmkpWKqnR2kQA4rQD6fpxSL
+        RSKVaFqhJHTEgiDQwelSZGExQsV4hbDc1dUVWFnRiQGpDJaXlylkLnTHtChuXzdyeluI6XHHxOSmaFeI
+        liiCKJagVEIE0neBJkXIi0W+E0l1dRDJc1RsGbbcyOUyraFpUhzk0relYLVapVcIp60oMh0OHqKXjQlx
+        x+fw9T86OtJfkEcGh8NxyeF4d9vpHLlD8Tgpo87RQZTpQn04KNKl2oEKLR+fUUgIj9fdHLC8ftL6j+td
+        DtfoUxTowrMpUYJt2t/fh63tLQjNBWE+8hWm/D54+fbFsclkutrS9C4UY187KbWySZvaZZ+enkJR4CEU
+        DgHHcWCzW3+zw+bHLcX5C8U4EBRhuZgQhYeHh3BycgLNZpN+/hWPgcvtgkHrQP2N+fmD1s8vXqyTve6d
+        HGd9fq8d8U/77DMfP9h0fFMTtgmfxzbiGPpktpif4axaPyXLYPgD66hpegNlHNQAAAAASUVORK5CYII=
 </value>
   </data>
   <data name="RenameToolStripButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
@@ -265,44 +265,44 @@
   <data name="ExportToolStripButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABYAAAAWCAYAAADEtGw7AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAOjSURBVEhLldJdaBNZFAfwvOiDD+Kjb4W2isK+LH2QRUQR
-        rNYHFakWrLpaTA3GNK0mu82SNa2NSTcxiY1NSCI15ZZqLG1tDElNP7SsFs3abl1YkFW0399N+p0KFs/O
-        mcxMrskoeOBPuJMzvzlz50r48nq9W1tbW+8Eg0ESCoVIIBAgzJq0tLQQn89HGhsbSUNDA6mvrycej4e4
-        XC7icDiI3W4nNpuNGAwGZ2Fh4WaOSxZzU/XCwgLMzs7C3Nwcm2g0KvzSicViX6yxB+8rKyu7xHHJIoRY
-        sGFwcBCGhoZgeHgYRkZGYHR0lM3Y2Bib8fFx0UxOToJKpSrluGQxW2HBp6eiNDYxMcEGETp4bWpqShyu
-        q6uz4CsimjohjSEgFvzvmzBO+jVwenqazczMjBD+Gv4vCrvdbnYrcFoa5UEewo8kFuxjPl467HQ62Ylx
-        WjEUb+ZPC31S+DX2icLMeWRhnPZrKI9hHx28hn1KpTIdtlqtlvn5eeELi6GIYA8GzzyGX2OvQqFIh81m
-        Mwvz06aiNLa4uCjkfqiP6YmxvXK5PB02Go0sTE9LT8qDS0tLbJaXl6Hu4V9w5VYn/GpvZ+A5kMlk6bBe
-        r2f3mJ6Wfn0eRXBlZQWawq+h1NYB+0oewIU/HoPe0ykOV1RUsHDqtPwW0Gi49w2obnfBEc1DyL3aDPuV
-        TaBgHpJ71vCI45Kl1WrT4NRpEX3x+gPz+mE4VRWE49pHDN4GeepWOMg8QG4Krv5wwnqSIxOl0WgEmP9o
-        uI4yQRin/fftGKjtYSi9/RTkti44Z2iHk7oAnLgWgPPGx1BUHYYSa2B622HzLo6VSNRqtSj8dnBcgN3N
-        vaBzdUKluwtkhjYoqXkCZ/TtUGzuAHm1H3KLa/r2XPCQ7UdNv3OsRMIc7lu4pzQcjcbgXvAVM/W8sL/x
-        eBzW1tZAf7cHSu1PQWrqgDLmDa67O0Eqlao4TqiNRUVFd3mY3uPmcD84fM+EPV5dXYWBNyNwzdMDV2p7
-        mC3pBnVtNzzv+w8KCgoMaCXIRG3Kz8+/0d/fHx8YGFij0/P85UddTfu6zhJar6ht+vSL3r+uMfs/V9W/
-        gHLXn/Cb5xkoK/3rkUgknpeXdxmtBJmsLZmZmbuzs7MPZGVlHaKTvefn8ouV91+ZvJHlmua/4aavDwwN
-        EdA5uz4fU3jfZe3MOZqRkfETGgnqO2r78Zs79hbf8Uur2t7LTP7RQm3LPz+edhhzctwbuBaqJJL/AepP
-        3PPKEyPJAAAAAElFTkSuQmCC
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAOjSURBVEhLldJdTBNZFAfwvuiDD8ZH30gAzW7ii+FhY4zR
+        mMgu+6DGICSiu0osNtZScFu1ptqy1BZbaKFS0tZgySVoNYDUpsVSUOJHtAqiiYlRs8v3Ny3fZZMlHudM
+        Z6bXdtxkT/JPc6dnfnPmzpXw5fF4tra3t98MBAIkGAwSv99PmDVpa2sjXq+XtLS0kObmZtLU1ETcbjdx
+        Op3E4XAQu91ObDYbMRqNDUVFRZs5LlnMTVULCwswOzsLc3NzbKLRqPBLJxaLfbPGHryvvLz8LMclixBS
+        gw2Dg4MwNDQEw8PDMDIyAqOjo2zGxsbYjI+Pi2ZychJUKlUZxyWL2YoafHoqSmMTExNsEKGD16ampsTh
+        xsbGGnxFRFMnpDEExIL//SeMk34PnJ6eZjMzMyOEv4b/i8Iul4vdCpyWRnmQh/AjiQX7mI+XDjc0NLAT
+        47RiKN7Mnxb6pPBr7BOFmfPIwjjt91Aewz46eA37lEplOmy1Wmvm5+eFLyyGIoI9GDzzGH6NvQqFIh22
+        WCwszE+bitLY4uKikDvBPqYnxvbK5fJ02GQysTA9LT0pDy4tLbFZXl6Gxvuv4HxtGC7aOxl4DmQyWTps
+        MBjYPaanpV+fRxFcWVmBe6G3UGbrgn2ld+H09YdgcIfFYb1ez8Kp0/JbQKOh5x9AdaMbDmruQ+4frbBf
+        eQ8UzENyfzM+4LhkabXaNDh1WkRfvP2bef0QHKsMwBHtAwbvgDx1O/zMPEBuDqzuOGot4MhEaTQaAeY/
+        Gq6jTBDGad9/GgO1PQRlNx6D3NYNJ42dUKDzw9GrfjhlegjFVSEotfqnt/1q+YljJRK1Wi0KfxocF2BX
+        63PQOcNQ4eoGmbEDSusewQlDJ5RYukBe5YPckrq+PafdZPsh8xWOlUiYw12Le0rD0WgMbgdeM1PPC/sb
+        j8dhbW0NDLd6ocz+GKTmLihn3uBPVxikUqmK44TaWFxcfIuH6T1uDfWDw/tU2OPV1VUY+DACV929cL6+
+        l9mSHlDX98Czvo9QWFhoRCtBJmpTfn7+tf7+/vjAwMAand5nL//R1Xau66qD6/r6u/9eqPSta8wdXyqb
+        XsAl5xO47H4KSr1vPRKJxPPy8s6hlSCTtSUzM3N3dnb2gaysrF/oZO/5/dKZijuvzZ7Icl3rG6j29oGx
+        OQI6R/jLYYXnc9aPOYcyMjJ2oZGg/kdtP1L9w96Smz5pZcdfMrNvtEjb9m7ncYcpJ8e1gWuhSiL5CuN/
+        3OoAo+WmAAAAAElFTkSuQmCC
 </value>
   </data>
   <data name="DictionaryToolStripButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABYAAAAWCAYAAADEtGw7AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAANZSURBVEhLtdR9TMxxAMfx3zyUYfMUxoYZ/zQP8zAj62L6
-        w0MPk4bUIktmDqGcmojQ2chjd5frcl3uKueuJzrdXa4SanSuut9d4VRiNqekDpuhj98TLfzh94fP9t7v
-        99frj+9+vy/xc4sX7xweuOlUctQ+iTpyj1QbsTtTu0koublFKGWK3CvTRcdn6aL3Z+m2JVy9HpOYrY4V
-        ZatjEuV5AaGpoRzz51aFH02vsXWgoq4FRQ+eQ3GnGTl37FBWUBlJ5FKpTA7kmR1QVzqZNHed0Fa3Ik0s
-        62m4OSyRowYvIu5CSWN7N8qqbSisfgpJqe2fkpY1QqLS4rV1RXeVhvDhuIHFHpKbG9u6UX6viRdMJ9Pc
-        Qrt9wde6PGIpxw1MmJL7gIaND0nesFxrQadNgMc3iF0cN7DD6RorDVsetfKGc4rrcPHq5n65xr8rIXXU
-        JI5kl3Je77C1deGezcUbvm6w4XjmSujNG5GcNno9R7JLl5S5aLjO3sEbvlFJIuF0KEqrInBEPCaNI9ll
-        KIyvnrx4B+vTN7xhfc0zHIiPgTknGGfE0ws5kt2VvEq31fUOTS/cvGH6W06NPdbfFrTme8vS+S85kp2s
-        oLaHhpvbu3jD9M9yVihGj68vOoOC3pIEMZpBZ6/Z660srvc0PHejiTpnvrCygsTF4woGdoeFfbIShC8D
-        LwlMmqA0WD/TcCN1znxh+e0myK7oGfh9eDiahw5lvwy/dUdmFFfWf6FhG3UcfGE6hcYCT2QkeuPiYPfy
-        imfgeYK4RYZa8pvVRcNuFN13/dMFlG9pQQFVYVUrVEVV303jJqqdI0dKmwliMgPP8YteffeRC9f0D5Gp
-        NECqMlDPckiod0muAdnqCmRrqPKNUNAVGJFTYGIrNOHYOR3Cdl3+OGvOuuUM+HNzBTuiVCX1uCQvBUmS
-        v3I4HH/N6XT+qtx0H1HCTPgFJdZ7e3vP5Eh28wWxm1MzdP0ZWbfw4UMvensH19fX99c8Hg9annVi6z4p
-        AkKSGihqGity85m+aMrWeEnH9oNyiE7mQ3y5lFcJJ9RYtSHFTlOsOLAhU2cHLhSEiIoCgpNqBKHJtb/n
-        H3zYsjxYZP49/xBR+YqQQ2XL1h48QzleLDd4w6nGUtHXHt/GU42g+t8jiB+8Vy0U+W8lQAAAAABJRU5E
-        rkJggg==
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAANYSURBVEhLtdR/TIxxAMfxZ36UYfMrjA0z/ml+DTOyLqY/
+        0K9JQ2olS2YOoZyaiNDZ/Ka7y3X9uNxVrq4Une4uVwnX6Fx1z13hUmI2p6QOm6GP5xct/OH5w2d773n+
+        ev3x3fN8iZ9bunTnSP/Np5Ij90lUEXukmvDdGZrNQknxVqGUKWKvrCQqPrMkan9mybaEa9djErNUsaIs
+        VUyiPN8vJDWEY/7cmrCj6XXWTlSZW1H64DkUd1qQfceG3CoqPYk8KqXBjnyjHapqB5P6rgOa2jakiWW9
+        jcUjEjlq6MLjLt5s6uhBRa0VRbVPISm3/lPSiiZIlBq8tqzqqVETXhw3uNhDcmPTix5U3mvmBdPJ1LfQ
+        YVv01ZxPLOe4wQlT8h7QsP4hyRuWa0zosgrw+Aaxi+MGdzhdbaFh06M23nB2mRkXM7cMyNW+3QmpY6Zw
+        JLuUC1q79UU37lmdvOHrOiuOZ6yG1rgJyWljN3Aku3RJhZOGzbZO3vCNahIJp0NQXhOOI+JxaRzJ7rxC
+        /+pJ+ztYnr7hDWvrnuFAfAyM2UE4I55ZxJHsruZXuyzOd2hud/GG6W85NfbYQHvA2u+tyxe+5Eh2ssL6
+        Xhpu6ejmDdM/y1mhGL3e3ugKDHxLEsRYBp27bq9nblmDu/G5C83UOfOFc6tIXDquYGBXaOgnC0F4M/Ay
+        /6RJOTrLZxpuos6ZLyy/3QzZVS0Dvw8LQ8vw4eyX4RNwZFZZtfkLDVup4+AL0ynUJrgjItAXFwebh0c8
+        Ay8QxC3R1ZPfLE4adqH0vvOfLqACUysKqYpq2qAsrflumDBZ5Rg9WtpCEFMZeJ5P1Nq7j5zI0T5ERq4O
+        UqWOelZCQr1L8nTIUlUhS01VoIeCrlCP7EIDW5EBx86VIHTXlY9z5gWsZMCfmy/YEam82YDL8nKQJPkr
+        u93+1xwOx68qDfcRKcyAT2Big6en52yOZLdQELsl9VzxwPnMW/jwoQ99fUPr7+//a263G63PuhC9Twq/
+        4KRGiprBity8Zi6ZFh0v6dx+UA7RyQKIr5TzKuGECms2pthoihUHN2z6XP/FgmBRqV9QUp0gJLn+93yD
+        DptWBomMv+cbLKpcFXyoYsX6g2cox4Plhm4k1Xgq+trj20SqUVT/ewTxA5Q3LQq1n2r3AAAAAElFTkSu
+        QmCC
 </value>
   </data>
 </root>
