--- a/Changelog.txt
+++ b/Changelog.txt
@@ -2,8 +2,10 @@
    • Full HiDPI support
    • Use Taiga icon pack
    • Export to new Thorn Writer format
-   • Export to HTML
-   • Bug fixes
+   • Export pages to HTML
+   • Export pages to Markdown
+   • Remember display font chosen by user on dictionary window
+   • Fixed bug where character editor window would pop up after being closed
 
 Version 9.4 (April 24, 2019)
    • Redesign symbols panel
