--- a/Changelog.txt
+++ b/Changelog.txt
@@ -5,8 +5,9 @@
    • Export pages to HTML
    **• Export pages to Markdown
    **• Remember display font chosen by user on dictionary window
+   • Fixed bug where "clear style" on edit style dialog wouldn't refresh the preview
    **• Fixed bug where character editor window would pop up after being closed
-   **• Fixed bug where sometimes the second file loaded in a row wouldn't fully load
+   • Fixed bug where sometimes the second file loaded in a row wouldn't fully load
 
 Version 9.4 (April 24, 2019)
    • Redesign symbols panel
