--- a/Changelog.txt
+++ b/Changelog.txt
@@ -10,7 +10,8 @@
    • Fixed bug where "clear style" button on edit style dialog wouldn't refresh the preview
    • Fixed bug where character editor would pop up after being closed
    • Fixed bug where character insertion could sometimes fail
-   • Fixed bug where sometimes the second file loaded in a row wouldn't fully load
+   • Fixed bug where the second file loaded in a row sometimes wouldn't fully load
+   • Fixed bug where scrollbar would show on accents panel in character editor even when not needed
 
 Version 9.4 (April 24, 2019)
    • Redesign symbols panel
