--- a/Changelog.txt
+++ b/Changelog.txt
@@ -6,6 +6,7 @@
    **• Add option in settings to load character editor on startup
    **• Export pages to Markdown
    **• Remember display font chosen by user on dictionary window
+   **• Now has a dedicated installer
    • Character editor can now be used on text boxes in properties panel
    • Fixed bug where "clear style" button on edit style dialog wouldn't refresh the preview
    • Fixed bug where character editor would pop up after being closed
